# git-summary

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  git.rs  main.rs  summarizer.rs
src/formatters/: json.rs  markdown.rs  mod.rs  pretty.rs
