[package]
name = "git-summary"
version = "0.1.0"
edition = "2021"
description = "CLI tool to summarize git commits using LLM"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
anyhow = "1"
